New Layout Presentation v1

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </section>
 
       <div class="park-summary">
-        <div>
+        <div class="summary-box">
           <h2>Summary</h2>
           <p class="short-txt">
             Run by the Indy Parks Department, this is a pretty nice place to
@@ -133,7 +133,7 @@
           <a href="javascript:;" class="read-less">Read Less</a>
         </div>
 
-        <div>
+        <div class="summary-box">
           <h2>Best Feature</h2>
           <p class="short-txt">
             Probably the most consistent and high turnout outdoor place to play.
